# tendwire

./: .env.example  .gitignore  INSTALL.md  LICENSE  README.md  RELEASE.md  SECURITY.md  herdr-plugin.toml  pyproject.toml  tendwired.service.example
.github/workflows/: ci.yml
docs/: answer_decision.md
docs/evidence/: goal06-store-benchmark.md  goal07-turn-ingestion-benchmark.md  goal08-codex-session-reader-benchmark.md  goal08b-sqlite-sidecar-race-recovery.md  outbox-delivery-lane.md
docs/goals/post-release/: 13-low-latency-turn-delta-sync.md
docs/goals/pre-release/: 01-stable-worker-continuity.md  02-real-herdr-event-deduplication.md  03-public-turn-content-safety.md  04-local-state-permissions.md  04b-attention-lifecycle-stability.md  05-lossless-long-responses.md  06-bounded-store-and-migrations.md  07-background-turn-ingestion.md  08-codex-session-reader-hardening.md  08b-sqlite-sidecar-race-recovery.md  09-independent-pending-state.md  10-delivery-aware-turn-retention.md  11-command-idempotency-semantics.md  12-release-engineering.md  README.md
scripts/: codex_session_reader_benchmark.py  herdr_plugin.py  herdr_smoke.py  live_herdr_smoke.sh  release_artifacts.py  sqlite_sidecar_race_benchmark.py  store_benchmark.py  tendwired_lifecycle_smoke.sh  turn_ingestion_benchmark.py
src/tendwire/: __init__.py  _version.py  cli.py  command_submission.py  config.py  daemon.py  daemon_api.py  local_state.py  worker_identity.py
src/tendwire/backends/: __init__.py  herdr_cli.py  herdr_command.py  herdr_decision.py  herdr_events.py  herdr_protocol.py  herdr_socket.py  herdr_turns.py
src/tendwire/connectors/: __init__.py  outbox.py
src/tendwire/core/: __init__.py  actions.py  attention.py  commands.py  models.py  projector.py  turns.py
src/tendwire/store/: __init__.py  sqlite.py
tests/: test_actions.py  test_answer_decision.py  test_backend.py  test_backend_pending.py  test_boundaries.py  test_cli.py  test_cli_command.py  test_codex_session_reader.py  test_command_presend_retryability.py  test_command_replay_authority.py  test_command_submission.py  test_commands.py  test_config.py  test_connector_daemon_cli.py  test_connector_outbox.py  test_daemon.py  test_delivery_retention.py  test_delivery_retention_hardening.py  test_delivery_retention_migration.py  test_delivery_retention_projection.py  test_delivery_retention_recovery.py  test_diagnostics.py  test_herdr_events.py  test_herdr_protocol.py  test_herdr_smoke.py  test_herdr_socket.py  test_herdr_turns.py  test_local_state_permissions.py  test_models.py  test_public_content_safety.py  test_release_artifacts.py  test_release_readiness.py  test_snapshot_sanitize_performance.py  test_sqlite_sidecar_race_benchmark.py  test_store.py  test_turn_delta.py  test_turn_ingestion.py  test_turn_ingestion_benchmark.py  test_turn_submissions.py  test_turns.py  (+2 more)
tests/fixtures/herdr/: worker_identity_restore.json
tests/fixtures/herdr/event_replay/: status_transitions.json
tests/fixtures/herdr/live_smoke/negative_private/: agent_list.json  public_safety.json  routing_resolution.json  unsafe_private.json  worker_surface.json  workspace_list.json
tests/fixtures/herdr/live_smoke/ok/: agent_list.json  closed_moved_observations.json  event_subscription.json  name_ambiguity.json  send_addressing.json  status_agent_status_changed.json  status_event.json  worker_surface.json  workspace_list.json
