[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tendwire"
version = "0.1.0"
description = "Local-first control plane for terminal-based agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Tendwire Contributors" },
]
keywords = ["agent", "control-plane", "terminal", "local-first"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = []

[project.scripts]
tendwire = "tendwire.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tendwire"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "herdr_live: opt-in live Herdr smoke checks that require an isolated Herdr session",
]
