[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tendwire"
dynamic = ["version"]
description = "Local API and durable control plane for Herdr coding agents"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "AGPL-3.0-or-later" }
authors = [
    { name = "Tendwire Contributors" },
]
keywords = ["agent", "control-plane", "terminal", "local-first"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = []

[project.scripts]
tendwire = "tendwire.cli:main"

[project.optional-dependencies]
dev = [
    "build>=1.2,<2",
    "hatchling>=1.27,<2",
    "pytest>=9,<10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tendwire"]

[tool.hatch.version]
path = "src/tendwire/_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/LICENSE",
    "/SECURITY.md",
    "/INSTALL.md",
    "/.env.example",
    "/README.md",
    "/herdr-plugin.toml",
    "/pyproject.toml",
    "/RELEASE.md",
    "/tendwired.service.example",
    "/scripts",
    "/docs/evidence",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "herdr_live: opt-in live Herdr smoke checks that require an isolated Herdr session",
]
